apps/base/liams-notes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: notes
  name: notes-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: notes.nzdev.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 80
# Tempory till setup the home page again...
  - host: nzdev.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 80
